--- a/ball_chaser/CMakeLists.txt
+++ b/ball_chaser/CMakeLists.txt
@@ -204,3 +204,9 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 add_executable(drive_bot src/drive_bot.cpp)
 target_link_libraries(drive_bot ${catkin_LIBRARIES})
 add_dependencies(drive_bot ball_chaser_generate_messages_cpp)
+
+#compile process_image node
+include_directories(include ${catkin_INCLUDE_DIRS})
+add_executable(process_image src/process_image.cpp)
+target_link_libraries(process_image ${catkin_LIBRARIES})
+add_dependencies(process_image ball_chaser_generate_messages_cpp)
